shawk/awk/rdpg/src/compiler/parser/tests/accept/bad.txt
error: file grammars/bad.rdpg, line 5, pos 10: unexpected '?' after 'terminal'
foo : BAR? ;
         ^
expected one of: '\' 'terminal' 'non-terminal' '|' ';' 

error: file grammars/bad.rdpg, line 7, pos 10: unexpected 'terminal' after '\'
foo : \BAR ;
         ^
expected: 'non-terminal' 

